kubernetes/frontend/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: frontend-ingress
    namespace: online-boutique
spec:
  ingressClassName: nginx
  rules:
    - host: online-boutique.lptdevops.website
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: frontend-service
              port:
                number: 80
